<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.whitesource.teamcity</groupId>
    <artifactId>parent</artifactId>
    <version>21.8.2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>White Source TeamCity plugin</name>
    <description>White Source external update agent for the TeamCity CI tool</description>
    <url>https://github.com/whitesource/teamcity-plugin</url>
    <inceptionYear>2012</inceptionYear>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:whitesource/teamcity-plugin.git</connection>
        <developerConnection>scm:git:git@github.com:whitesource/teamcity-plugin.git</developerConnection>
        <url>git@github.com:whitesource/teamcity-plugin.git</url>
    </scm>
    <issueManagement>
        <url>https://github.com/whitesource/teamcity-plugin/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <organization>
        <name>White Source</name>
        <url>http://www.whitesourcesoftware.com/</url>
    </organization>
    <developers>
        <developer>
            <id>edo.shor</id>
            <name>Edo Shor</name>
            <email>edo.shor@whitesourcesoftware.com</email>
            <url>http://www.whitesourcesoftware.com/</url>
            <roles>
                <role>Lead Developer</role>
            </roles>
        </developer>
    </developers>

    <modules>
        <module>server</module>
        <module>agent</module>
        <module>assembly</module>
        <module>common</module>
    </modules>

    <properties>
        <teamcity.version>7.0.3</teamcity.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>

            <!-- Teamcity -->
            <dependency>
                <groupId>org.jetbrains.teamcity.agent</groupId>
                <artifactId>agent</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.agent</groupId>
                <artifactId>agent-openapi</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.agent</groupId>
                <artifactId>annotations</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.agent</groupId>
                <artifactId>common</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.agent</groupId>
                <artifactId>common-runtime</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.agent</groupId>
                <artifactId>runtime-util</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.agent</groupId>
                <artifactId>server-logging</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.tomcat</groupId>
                <artifactId>annotations-api</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.webapp</groupId>
                <artifactId>annotations</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.webapp</groupId>
                <artifactId>common-api</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.webapp</groupId>
                <artifactId>server</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.webapp</groupId>
                <artifactId>server-api</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.webapp</groupId>
                <artifactId>spring</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.webapp</groupId>
                <artifactId>spring-webmvc</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.teamcity.webapp</groupId>
                <artifactId>util</artifactId>
                <version>${teamcity.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Utilities -->
            <dependency>
                <groupId>org.jdom</groupId>
                <artifactId>jdom</artifactId>
                <version>1.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>1.4.18</version>
                <scope>provided</scope>
            </dependency>

            <!-- Specifications -->
            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>servlet-api</artifactId>
                <version>2.5</version>
                <scope>provided</scope>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>1.9.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <configuration>
                    <aggregate>true</aggregate>
                    <header>src/etc/header.txt</header>
                    <strictCheck>true</strictCheck>
                    <encoding>UTF-8</encoding>
                    <properties>
                        <year>${project.inceptionYear}</year>
                    </properties>
                    <excludes>
                        <exclude>.idea/**</exclude>
                        <exclude>LICENSE.txt</exclude>
                        <exclude>**/site/**</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.1</version>
                <configuration>

                    <reportPlugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-project-info-reports-plugin</artifactId>
                            <version>2.5</version>
                            <reports>
                                <report>index</report>
                                <report>project-team</report>
                                <report>license</report>
                                <report>scm</report>
                                <report>issue-tracking</report>
                                <report>cim</report>
                                <report>mailing-list</report>
                                <report>dependencies</report>
                                <report>dependency-convergence</report>
                                <report>plugin-management</report>
                                <report>summary</report>
                            </reports>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-jxr-plugin</artifactId>
                            <version>2.3</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-report-plugin</artifactId>
                            <version>2.12.2</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-javadoc-plugin</artifactId>
                            <version>2.8.1</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-checkstyle-plugin</artifactId>
                            <version>2.9.1</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>findbugs-maven-plugin</artifactId>
                            <version>2.5.2</version>
                            <configuration>
                                <argLine>-Xmx256m</argLine>
                                <argLine>-XX:MaxPermSize=256m</argLine>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>jdepend-maven-plugin</artifactId>
                            <version>2.0-beta-2</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>cobertura-maven-plugin</artifactId>
                            <version>2.5.1</version>
                        </plugin>
                        <plugin>
                            <groupId>org.codehaus.mojo</groupId>
                            <artifactId>taglist-maven-plugin</artifactId>
                            <version>2.4</version>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-pmd-plugin</artifactId>
                            <version>2.7.1</version>
                            <configuration>
                                <targetJdk>1.6</targetJdk>
                            </configuration>
                        </plugin>
                    </reportPlugins>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <optimize>true</optimize>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <releaseProfiles>Release</releaseProfiles>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.whitesource</groupId>
                    <artifactId>whitesource-maven-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <orgToken>${whitesource.orgToken}</orgToken>
                        <product>TeamCity plugin - ${teamcity.version}</product>
                        <checkPolicies>true</checkPolicies>
                        <excludes>
                            <exclude>assembly</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.mycila.maven-license-plugin</groupId>
                    <artifactId>maven-license-plugin</artifactId>
                    <version>1.9.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jarsigner-plugin</artifactId>
                    <version>1.2</version>
                    <executions>
                        <execution>
                            <id>sign</id>
                            <phase>package</phase>
                            <!--<goals>-->
                                <!--<goal>sign</goal>-->
                            <!--</goals>-->
                        </execution>
                    </executions>
                    <configuration>
                        <keystore>${keystore.location}</keystore>
                        <alias>${keystore.alias}</alias>
                        <storepass>${keystore.storepass}</storepass>
                        <keypass>${keystore.keypass}</keypass>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>Package</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-assembly-plugin</artifactId>
                            <configuration>
                                <appendAssemblyId>false</appendAssemblyId>
                                <descriptors>
                                    <descriptor>src/assemble/assembly.xml</descriptor>
                                </descriptors>
                            </configuration>
                            <executions>
                                <execution>
                                    <id>make-assembly</id>
                                    <phase>package</phase>
                                    <goals>
                                        <goal>single</goal>
                                    </goals>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>Release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.github.github</groupId>
                        <artifactId>site-maven-plugin</artifactId>
                        <version>0.8</version>
                        <configuration>
                            <server>github</server>
                            <force>true</force>
                            <message>Building site for ${project.artifactId} - ${project.version}</message>
                            <excludes>
                                <exclude>assembly</exclude>
                            </excludes>
                        </configuration>
                        <executions>
                            <execution>
                                <id>github-pages</id>
                                <phase>site</phase>
                                <goals>
                                    <goal>site</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Sonatype staging repository</name>
            <uniqueVersion>false</uniqueVersion>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype snapshots repository</name>
            <uniqueVersion>false</uniqueVersion>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>